syntax = "proto3";

package dbaseproject;

service DbaseProject {
  
  rpc createDocument(document) returns (document){}
  rpc readDocument(document) returns (document){}
  rpc updateDocument(document) returns (document){}
  rpc deleteDocument(document) returns (document){}

  rpc dropDatabase(baseReq) returns (respObj){}
  rpc dropCollection(baseReq) returns (respObj){}

  rpc dbIsReady(baseReq) returns (respObj){}

}

message baseReq {
  string baseName = 1;
  string collection = 3;
}

message document {
  string collection = 1;
  string query = 2;
  string data = 3;
  string populate = 4;
  string select = 5;
}

message respObj {
  bool status = 1;
}
